Colaboratory를 통해 생성됨

--- a/lecture5.ipynb
+++ b/lecture5.ipynb
@@ -4638,14 +4638,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 726
+          "height": 684
         },
         "id": "WLdyDaexbv0j",
-        "outputId": "6a8081b6-ecb7-4a62-9440-d7b41421cdd3"
+        "outputId": "590d78d9-4fe5-4e1f-c159-aaee64c2b11f"
       },
       "outputs": [
         {
@@ -4663,7 +4663,75 @@
       ],
       "source": [
         "##############\n",
+        "##upper_limit = df[outlier_candidate1].mean() + 3 * df[outlier_candidate1].std()\n",
+        "##lower_limit = df[outlier.candidate1].mean() - 3 * df[outlier_candidate1].std()\n",
         "\n",
+        "##df[(df[outlier_candidate1] < upper_limit) & (df[outlier_candidate1] > lower_limit)]\n",
+        "\n",
+        "###################\n",
+        "\n",
+        "attribute ='delay_time'\n",
+        "\n",
+        "\n",
+        "\n",
+        "Q1 = df[attribute].quantile(.25)\n",
+        "Q3 = df[attribute].quantile(.75)\n",
+        "\n",
+        "IQR = Q3 - Q1\n",
+        "\n",
+        "outlier_step = 1.5 * IQR\n",
+        "\n",
+        "outlier_candidate1 = ((df[attribute] < Q1 - outlier_step) | \n",
+        "     (df[attribute] > Q3 + outlier_step))\n",
+        "\n",
+        "\n",
+        "###################\n",
+        "\n",
+        "\n",
+        "attribute ='click_per_min'\n",
+        "\n",
+        "\n",
+        "\n",
+        "Q1 = df[attribute].quantile(.25)\n",
+        "Q3 = df[attribute].quantile(.75)\n",
+        "\n",
+        "IQR = Q3 - Q1\n",
+        "\n",
+        "outlier_step = 1.5 * IQR\n",
+        "\n",
+        "outlier_candidate2 = ((df[attribute] < Q1 - outlier_step) | \n",
+        "     (df[attribute] > Q3 + outlier_step))\n",
+        "\n",
+        "attribute ='refresh_per_min'\n",
+        "\n",
+        "\n",
+        "\n",
+        "Q1 = df[attribute].quantile(.25)\n",
+        "Q3 = df[attribute].quantile(.75)\n",
+        "\n",
+        "IQR = Q3 - Q1\n",
+        "\n",
+        "outlier_step = 1.5 * IQR\n",
+        "\n",
+        "outlier_candidate3 = ((df[attribute] < Q1 - outlier_step) | \n",
+        "     (df[attribute] > Q3 + outlier_step))\n",
+        "\n",
+        "outlier_candidate = df[\n",
+        "    outlier_candidate1 &\n",
+        "    outlier_candidate2 &\n",
+        "    outlier_candidate3\n",
+        "]\n",
+        "##outlier_candidate\n",
+        "\n",
+        "##################\n",
+        "df.loc[:,'abuser' ] = False\n",
+        "for index in outlier_candidate['code_student'].index:\n",
+        "  df.loc[index,'abuser'] = True\n",
+        "\n",
+        "\n",
+        "##################\n",
+        "\n",
+        "df[df['abuser'] == True]\n",
         "\n",
         "##############\n",
         "g = sns.pairplot(df.drop(columns=['code_student']), hue='abuser')\n",
@@ -4767,13 +4835,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1JNX3scVBnBD",
-        "outputId": "7daf556a-5791-408c-eaba-ea6ee6627f28"
+        "outputId": "4b902341-4468-4c30-ae91-4d1aedf3f4c9"
       },
       "outputs": [
         {
@@ -4782,13 +4850,12 @@
           "text": [
             "outlier은 다음과 같으며, outlier들의 행동 양상은 기존 사용자에 비해 #####\n",
             "[201811933 201811958 201816880 201818738 201917437 202012285 202016312\n",
-            " 202017340 202017957 202018326 202110260 202117531 202119541 202211912\n",
-            " 202212354]\n"
+            " 202017340 202017957 202018326 202110260 202117531 202119541 202211912]\n"
           ]
         }
       ],
       "source": [
-        "outliers = ###############\n",
+        "outliers = outlier_candidate['code_student'].values\n",
         "msg = \"outlier은 다음과 같으며, outlier들의 행동 양상은 기존 사용자에 비해 #####\"\n",
         "\n",
         "print(msg)\n",
