--- a/lecture6.ipynb
+++ b/lecture6.ipynb
@@ -2724,194 +2724,32 @@
       "cell_type": "code",
       "source": [
         "from sklearn import preprocessing \n",
-        "null_index = df[['weight']].isnull()\n",
-        "\n",
+        "null_index = df[df['weight'].isnull()].index\n",
         "null_index\n",
         "\n"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 423
+          "base_uri": "https://localhost:8080/"
         },
         "id": "CZeAeD-a_M_C",
-        "outputId": "83a9964b-052e-4bb5-c63c-2e2b55e5c5b6"
+        "outputId": "69ffa4cd-569c-4f27-a37c-b942a3576f4b"
       },
-      "execution_count": 56,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "     weight\n",
-              "0     False\n",
-              "1     False\n",
-              "2     False\n",
-              "3     False\n",
-              "4     False\n",
-              "..      ...\n",
-              "994   False\n",
-              "995   False\n",
-              "996   False\n",
-              "997   False\n",
-              "998   False\n",
-              "\n",
-              "[999 rows x 1 columns]"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-f4d84aab-6689-4641-b12a-2317c163dc6a\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>weight</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>994</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>995</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>996</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>997</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>998</th>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>999 rows × 1 columns</p>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f4d84aab-6689-4641-b12a-2317c163dc6a')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-f4d84aab-6689-4641-b12a-2317c163dc6a button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f4d84aab-6689-4641-b12a-2317c163dc6a');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "Int64Index([  6,  19,  33,  51,  70,  91, 110, 128, 143, 152, 161, 170, 189,\n",
+              "            204, 213, 228, 234, 243, 255, 270, 285, 297, 309, 324, 336, 348,\n",
+              "            357, 372, 400, 421, 436, 454, 469, 511, 565, 592, 616, 663, 691,\n",
+              "            748, 784, 832, 876, 905, 956, 983],\n",
+              "           dtype='int64')"
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 59
         }
       ]
     },
@@ -3216,9 +3054,9 @@
           "height": 206
         },
         "id": "t562byQkfPx7",
-        "outputId": "075e7548-0264-4ce3-af47-569e1b8d71e4"
+        "outputId": "556d5b9b-9eb3-4978-c7b2-75365cc246fc"
       },
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3233,7 +3071,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c3641976-5b5b-43c1-b45a-b47f47d946e1\">\n",
+              "  <div id=\"df-f60d7342-0c10-4b31-afc9-0ed548670ac0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -3310,7 +3148,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c3641976-5b5b-43c1-b45a-b47f47d946e1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f60d7342-0c10-4b31-afc9-0ed548670ac0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -3361,12 +3199,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c3641976-5b5b-43c1-b45a-b47f47d946e1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f60d7342-0c10-4b31-afc9-0ed548670ac0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c3641976-5b5b-43c1-b45a-b47f47d946e1');\n",
+              "          const element = document.querySelector('#df-f60d7342-0c10-4b31-afc9-0ed548670ac0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -3389,7 +3227,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 60
         }
       ]
     },
